@@ -1,3 +1,11 @@
+Wed, 27 Sep 2006 23:24:52 +0200 <informancer@web.de>
+	* Removed test for invalid channel. I now handled in the UIs.
+	* Fixed a bug in Channel.get_filename.
+	* Added new duplicate signal to ChannelLlist
+	* Updated Gpodder to use the "updated" signal
+	* Updated add_new_channel to use the ChannelList capabilities.
+	* Corrected a bug in on_itemImportChannels_activate.
+
 Thu, 21 Sep 2006 21:36:09 +0200 <informancer@web.de>
 	* Added loading and saving from ChannelList
 	* removed class variables from gPodderChannelReader
